# aoc

./: .clang-format  .gitignore  README.md  template.py
2015/: ratings.txt
2015/day1/: main.cpp
2015/day10/: main.cpp
2015/day11/: main.cpp
2015/day12/: main.cpp
2015/day13/: input.txt  main.cpp
2015/day14/: main.cpp
2015/day15/: input.txt  main.cpp
2015/day16/: main.cpp  solution1.txt  solution2.txt
2015/day17/: main.cpp
2015/day18/: main.cpp
2015/day19/: main.cpp
2015/day2/: main.cpp
2015/day20/: main.cpp
2015/day21/: main.cpp
2015/day22/: main.cpp
2015/day23/: main.cpp
2015/day24/: main.cpp
2015/day25/: main.cpp
2015/day3/: main.cpp
2015/day4/: main.py  main2.py
2016/: ratings.txt  template.py
2019/: CMakeLists.txt  main.cpp  problem_ratings.txt
2019/day1/: Makefile  day1.cpp  day1.hpp  solution.cpp
2019/day10/: day10.cpp  day10.hpp
2019/day11/: day11.cpp  day11.hpp
2019/day12/: day12.cpp  day12.hpp
2019/day13/: day13.cpp  day13.hpp
2019/day14/: day14.cpp  day14.hpp  input_part1.txt  test1.txt  test2.txt  test3.txt  test4.txt
2019/day15/: day15.cpp  day15.hpp
2019/day16/: day16.cpp  day16.hpp
2019/day17/: day17.cpp  day17.hpp
2019/day18/: day18.cpp  day18.hpp  day18_try1.cpp  day18_try2.cpp  dummy.txt
2019/day19/: day19.cpp  day19.hpp
2019/day2/: day2.cpp  day2.hpp
2019/day20/: day20.cpp  day20.hpp
2019/day21/: day21.cpp  day21.hpp
2019/day22/: day22.cpp  day22.hpp
2019/day23/: day23.cpp  day23.hpp
2019/day24/: day24.cpp  day24.hpp
2019/day25/: day25.cpp  day25.hpp  notes.txt  part1 copy.cmd  part1.cmd
2019/day3/: day3.cpp  day3.hpp
2019/day4/: day4.cpp  day4.hpp
2019/day5/: day5.cpp  day5.hpp
2019/day6/: day6.cpp  day6.hpp
2019/day7/: day7.cpp  day7.hpp
2019/day8/: day8.cpp  day8.hpp
2019/day9/: day9.cpp  day9.hpp
2019/src/: EmergencyHullRobot.cpp  EmergencyHullRobot.hpp  IntcodeCrusher.cpp  IntcodeCrusher.hpp  RepairDroid.cpp  RepairDroid.hpp  Vec3.hpp  defs.hpp  helper.hpp  intcode.cpp  intcode.hpp
2020/: ratings.txt
2021/: ratings.txt
2021/day19/: CMakeLists.txt  main.cpp
2022/: ratings.txt
2023/: ratings.txt
2024/: ratings.txt
2025/: ratings.txt
(+173 files in other folders)
